[package]
name = "getset2"
description = """
Getset, we're ready to go!

A procedural macro for generating the most basic getters and setters on fields.
"""
version = "0.2.1"
authors = [
    "Ana Hobden <ana@hoverbear.org>",
    "John Baublitz <john.m.baublitz@gmail.com",
    "Andeya Lee <andeyalee@outlook.com>",
]
license = "MIT"
edition = "2018"

categories = ["development-tools::procedural-macro-helpers"]
keywords = ["macro", "getter", "setter", "getters", "setters"]
readme = "README.md"
repository = "https://github.com/andeya/getset"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "2"
proc-macro2 = { version = "1", default-features = false }
proc-macro-error2 = "2"
