[package]
name = "getset2"
description = """
Getset2 is a derive macro, which is inspired by getset,
 is designed for generating the most basic getters and setters on struct fields.
"""
version = "0.4.0"
authors = ["Andeya Lee <andeyalee@outlook.com>"]
license = "MIT"
edition = "2018"

categories = ["development-tools::procedural-macro-helpers"]
keywords = ["macro", "getter", "setter", "getters", "setters"]
readme = "README.md"
repository = "https://github.com/andeya/getset2"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "2"
proc-macro2 = { version = "1", default-features = false }
proc-macro-error2 = "2"
